--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,11 @@ body, html {
 {
     margin: 0 auto;
 }
+body {
+    background-image: url('C:\Users\NAGA MANOGNA\OneDrive\Desktop\Projects\LoginPage\chocolate.jpg'); /* Your image path */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh; /* Ensures the body takes the full height of the viewport */
+    margin: 0; /* Removes default margin */
+}
