--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,31 @@ body {
     background-color: #ff5722; /* Darker shade of orange */
     transform: scale(1.05); /* Slightly enlarge the button on hover */
 }
+/*changes in css for singup*/
+.s:hover {
+    background-color: rgba(240,215,167); /* Darker shade of orange */
+    transform: scale(1.05); /* Slightly enlarge the button on hover */
+}
+.s {
+    width: 150px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color:rgb(195,121,96);
+    color: whitesmoke;
+    font-size: 16px;
+    cursor: pointer;
+    margin: 0 auto;
+}
+.bo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url('/signup.jpg'), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)); /* Background image with gradient overlay */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed; /* Creates parallax effect */
+    height: 100vh;
+    font-family: Arial, sans-serif;
+}
