--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #ff7043;
+    background-color:rgb(195,121,96);
     color: whitesmoke;
     font-size: 16px;
     cursor: pointer;
@@ -68,12 +68,12 @@ body {
     width: 100%;
 }
 .b:hover {
-    background-color: #ff5722; /* Darker shade of orange */
+    background-color: rgba(240,215,167);  
     transform: scale(1.05); /* Slightly enlarge the button on hover */
 }
 /*changes in css for singup*/
 .s:hover {
-    background-color: rgba(240,215,167); /* Darker shade of orange */
+    background-color: rgba(240,215,167); 
     transform: scale(1.05); /* Slightly enlarge the button on hover */
 }
 .s {
